--- a/data-analyst.html
+++ b/data-analyst.html
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/affirm/1779d148-8516-4848-a756-47d58cd986e3'>Affirm - Data Analyst - Merchant Risk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/affirm/1779d148-8516-4848-a756-47d58cd986e3'>Affirm - Data Analyst - Merchant Risk</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -143,11 +143,11 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/apellis/job/osRrbfwF'> Apellis Pharmaceuticals Careers - Director, Biostatistics</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/apellis/job/osRrbfwF'> Apellis Pharmaceuticals Careers - Director, Biostatistics</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vmlyr/job/o0gqbfwB'>VMLY&R Careers - Senior Data Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vmlyr/job/o0gqbfwB'>VMLY&R Careers - Senior Data Analyst</a></h5> 
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -202,7 +202,7 @@
 <p><span class="badge badge-light">Oxford</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/yelp/2ee6b838-409e-4db8-a6ee-df72f2984e68'>Yelp - Data Science Analyst</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -322,7 +322,7 @@
 <p><span class="badge badge-light">Delhi, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://netimpactstrategies.applytojob.com/apply/5c4dOnwSL1/Data-Modeling-Analyst'>Data Modeling Analyst - NetImpact Strategies - Career Page</a></h5> 
+<h5><a href='http://netimpactstrategies.applytojob.com/apply/5c4dOnwSL1/Data-Modeling-Analyst'>Data Modeling Analyst - NetImpact Strategies - Career Page</a></h5> 
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -422,7 +422,7 @@
 <p><span class="badge badge-light">Overland Park, KS</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/zetaglobal/job/oGzrbfwB'>Zeta Global Careers - Data Analyst - Reporting and Visualization</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/zetaglobal/job/oGzrbfwB'>Zeta Global Careers - Data Analyst - Reporting and Visualization</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
