--- a/android-engineer.html
+++ b/android-engineer.html
@@ -82,7 +82,7 @@
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mailchimp/jobs/1936176'>Job Application for Android Engineer at Mailchimp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mailchimp/jobs/1936176'>Job Application for Android Engineer at Mailchimp</a></h5> 
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -119,7 +119,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">France France Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/o4robfwO'>Trek Bicycle Karrieren?Android Mobile Software Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/trek-bicycle-de/job/o4robfwO'>Trek Bicycle Karrieren?Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -185,7 +185,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/'>Android Software Engineer - Permutive</a></h5> 
+<h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/'>Android Software Engineer - Permutive</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -209,7 +209,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-sp/job/o4robfwO'>Trek Bicycle carreras - Android Mobile Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-sp/job/o4robfwO'>Trek Bicycle carreras - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -222,7 +222,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/medmen/jobs/4479866002'>Job Application for Senior Android Engineer at MedMen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/medmen/jobs/4479866002'>Job Application for Senior Android Engineer at MedMen</a></h5> 
 <p><span class="badge badge-light">Culver City, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -287,7 +287,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://proximity.applytojob.com/apply/Tr7fXR5GKj/Android-Senior-Engineer'>Android Senior Engineer - ProximityCR - Career Page</a></h5> 
+<h5><a href='http://proximity.applytojob.com/apply/Tr7fXR5GKj/Android-Senior-Engineer'>Android Senior Engineer - ProximityCR - Career Page</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -370,7 +370,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CAUnited States</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<h5><a href='https://intellectsoft.workable.com/j/40777FEDAC'>Intellectsoft - Jobs: Senior Android Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://intellectsoft.workable.com/j/40777FEDAC'>Intellectsoft - Jobs: Senior Android Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">Kyiv Kyiv city, Ukraine Palo Alto</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
