--- a/ios-developer.html
+++ b/ios-developer.html
@@ -140,7 +140,7 @@
 <p><span class="badge badge-light">Somerville United States</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co:443/8x8/bad3cd3c-71b5-4046-b90a-5b6a2d40d65b?utm_source=Twitter&utm_medium=social-media-organic&utm_campaign=employee_advocacy&lever_via='>8x8 - Sr. iOS Mobile Developer</a></h5> 
+<h5><a href='https://jobs.lever.co:443/8x8/bad3cd3c-71b5-4046-b90a-5b6a2d40d65b?utm_source=Twitter&utm_medium=social-media-organic&utm_campaign=employee_advocacy&lever_via='>8x8 - Sr. iOS Mobile Developer</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -305,11 +305,11 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/431573-senior-ios-developer-m-f-d'>Job @ endios (Hamburg): Senior iOS Developer (m/f/d) | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/432562-senior-android-developer-m-f-d'>Job @ endios (Hamburg): Senior Android Developer (... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/432562-senior-android-developer-m-f-d'>Job @ endios (Hamburg): Senior Android Developer (... | JOIN</a></h5> 
 <p><span class="badge badge-light">Hamburg Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -341,7 +341,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Shanghai Shanghai</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cornershopapp/20020753-58b8-4910-9ecf-90a3e2264df2'>Cornershop - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/cornershopapp/20020753-58b8-4910-9ecf-90a3e2264df2'>Cornershop - iOS Developer</a></h5> 
 <p><span class="badge badge-light">Santiago</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -385,7 +385,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://bios-3.workable.com/j/A55BA1465A'>BIOS - Jobs: Machine Learning Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bios-3.workable.com/j/A55BA1465A'>BIOS - Jobs: Machine Learning Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Cambridge England, United Kingdom</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -405,12 +405,12 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Senior iOS Developer at TouchBistro in Toronto, Ontario, Canada.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
+<h5><a href='https://armut.applytojob.com/apply/Aj2VIj2bzZ/IOS-Developer'>iOS Developer - Armut Teknoloji AS - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Our purpose is to make it easy to find good quality, trusted providers by using 
 latest technologies and machine learning algorithms. We have served 5 million?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oura-health-ltd.workable.com/j/1C9F7783D6'>Oura Health Ltd - Jobs: iOS Developer - Apply online</a></h5> 
+<h5><a href='https://oura-health-ltd.workable.com/j/1C9F7783D6'>Oura Health Ltd - Jobs: iOS Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Northern Ostrobothnia, Finland</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
@@ -434,7 +434,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/highrise/cdf78851-9c72-4eee-bdd1-bcbdf927334d/apply'>Highrise - iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/highrise/cdf78851-9c72-4eee-bdd1-bcbdf927334d/apply'>Highrise - iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... As part of your application, we'd love to hear what you think are some of the best 
 designed apps (in terms of technical design) and why. This is open ended and?...</p>
@@ -461,7 +461,7 @@ automotive?...</p>
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
